# textrynum

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README-ecl.md  README-fabryk.md  README.md  docker-compose.yml  justfile  odm.toml
crates/design/: Cargo.toml  README.md
crates/design/dev/: 0001-phase-1-implementation.md  0002-phase-2-00-overview.md  0003-phase-2-01-step-trait.md  0004-phase-2-02-step-executor.md  0005-phase-2-03-toy-workflow-steps.md  0006-phase-2-04-workflow-orchestrator.md  0007-phase-2-05-sqlx-persistence.md  0008-phase-2-06-observability.md  0009-phase-2-07-integration.md  0010-phase-2-08-checklist.md  0011-claude-code-music-theory-mcp-server-extraction-audit.md  0012-fabryk-extraction-session-bootstrap-phases-1-7.md  0014-complete-the-fabryk-extraction-implementation-plan.md  0015-plan-cross-crate-duplicate-code-consolidation.md
crates/design/dev/concept-cards/: 0001-concept-card-framework-immediate-improvements-report.md  0002-a-guide-for-parallel-concept-card-extraction-v3.md  0003-howto-concept-card-extraction-with-claude-code.md
crates/design/dev/ecl/: 0012-milestone-1.1-specification-layer-ecl-pipeline-spec.md  0013-milestone-1.2-state-layer-ecl-pipeline-state.md  0014-milestone-1.3-topology-layer-ecl-pipeline-topo.md  0015-milestone-2.1-redbstatestore-ecl-pipeline-state.md  0016-milestone-2.2-pipeline-runner-core-ecl-pipeline.md  0017-milestone-2.3-topology-resolution.md  0018-milestone-3.1-filesystem-adapter-built-in-stages-ecl-adapter-fs-ecl-stages.md  0019-milestone-3.2-integration-test-suite.md  0020-milestone-4.1-google-drive-auth-enumerate-ecl-adapter-gdrive.md  0021-milestone-4.2-google-drive-fetch-full-pipeline-ecl-adapter-gdrive-ecl-stages.md  0022-milestone-5.1-cli-commands-ecl-cli-pipeline-subcommands.md  0023-milestone-5.2-observability-reporting.md  0024-milestone-6.1-slack-stub-validation-ecl-adapter-slack.md  0026-phase-1-detailed-implementation-plan-make-affinity-work.md  0027-phase-2-detailed-implementation-plan-make-giant-eagle-work.md  0028-phase-3-detailed-implementation-plan-make-walgreens-work.md
crates/design/dev/fabryk/: 0001-cc-prompt-fabryk-1.md  0002-cc-prompt-fabryk-1.md  0004-cc-prompt-fabryk-1.md  0005-cc-prompt-fabryk-1.md  0006-cc-prompt-fabryk-1.md  0007-cc-prompt-fabryk-3.5.md  0008-cc-prompt-fabryk-2.md  0009-cc-prompt-fabryk-2.md  0010-cc-prompt-fabryk-2.md  0011-cc-prompt-fabryk-2.md  0012-cc-prompt-fabryk-3.md  0013-cc-prompt-fabryk-3.md  0014-cc-prompt-fabryk-3.md  0015-cc-prompt-fabryk-3.md  0016-cc-prompt-fabryk-3.md  0017-cc-prompt-fabryk-36-phase-3-completion-v0.md  0018-cc-prompt-fabryk-4.md  0019-cc-prompt-fabryk-4.md  0020-cc-prompt-fabryk-4.md  0021-cc-prompt-fabryk-4.md  0022-cc-prompt-fabryk-4.md  0023-cc-prompt-fabryk-4.md  BOOTSTRAP.md  (+17 more)
crates/design/docs/: index.md
crates/design/src/: lib.rs
crates/ecl-adapter-fs/: Cargo.toml
crates/ecl-adapter-gdrive/: Cargo.toml
crates/ecl-adapter-gdrive/src/: auth.rs  error.rs  lib.rs  types.rs
crates/ecl-adapter-sftp/: Cargo.toml
crates/ecl-adapter-sftp/src/: lib.rs
crates/ecl-adapter-slack/: Cargo.toml
crates/ecl-adapter-zapier/: Cargo.toml
crates/ecl-cli/: Cargo.toml  README.md
crates/ecl-cli/src/: main.rs  pipeline.rs
crates/ecl-gcp-auth/: Cargo.toml
crates/ecl-gcp-auth/src/: auth.rs  error.rs  lib.rs  types.rs
crates/ecl-pipeline/: Cargo.toml
crates/ecl-pipeline-spec/: Cargo.toml
crates/ecl-pipeline-spec/src/: defaults.rs  error.rs  lib.rs  source.rs  stage.rs  validation.rs
crates/ecl-pipeline-state/: Cargo.toml
crates/ecl-pipeline-state/src/: checkpoint.rs  error.rs  ids.rs  lib.rs  memory_store.rs  redb_store.rs  store.rs  types.rs
crates/ecl-pipeline-topo/: Cargo.toml
crates/ecl-pipeline-topo/src/: error.rs  lib.rs  resolve.rs  resource_graph.rs  schedule.rs  traits.rs
crates/ecl-pipeline/src/: batch.rs  lib.rs  lifecycle.rs  registry.rs  runner.rs
crates/ecl-secrets/: Cargo.toml
crates/ecl-secrets/src/: file.rs  lib.rs
crates/ecl-sink-gcs/: Cargo.toml
crates/ecl-sink-gcs/src/: lib.rs
crates/ecl-sink-kafka/: Cargo.toml
crates/ecl-sink-kafka/src/: lib.rs
crates/ecl-stages/: Cargo.toml
crates/ecl-stages/src/: aggregate.rs  assemble.rs  csv_parse.rs  date_parse.rs  decompress.rs  emit.rs  extract.rs  field_map.rs  filter.rs  join.rs  lib.rs  lookup.rs  normalize.rs  timezone.rs  validate.rs
crates/ecl-steps/: Cargo.toml  README.md
crates/ecl-steps/src/: lib.rs
crates/ecl-workflows/: Cargo.toml  README.md
crates/ecl-workflows/src/: critique_loop.rs  lib.rs  main.rs  simple.rs
crates/ecl-workflows/tests/: integration_tests.rs  unit_tests.rs
crates/fabryk-acl/: Cargo.toml
crates/fabryk-acl/src/: enforcement.rs  error.rs  lib.rs  policy.rs  store.rs
crates/fabryk-api/: Cargo.toml
crates/fabryk-api/src/: error.rs  lib.rs  middleware.rs  routes.rs  server.rs
crates/fabryk-auth/: Cargo.toml
crates/fabryk-auth-google/: Cargo.toml
crates/fabryk-auth-google/src/: lib.rs
crates/fabryk-auth-mcp/: Cargo.toml
crates/fabryk-auth-mcp/src/: lib.rs
crates/fabryk-auth/src/: error.rs  lib.rs  middleware.rs  user.rs
crates/fabryk-cli/: Cargo.toml
crates/fabryk-cli/src/: app.rs  cache.rs  cli.rs  commands.rs  config.rs  config_handlers.rs  config_loader.rs  config_utils.rs  error.rs  graph_handlers.rs  lib.rs  main.rs  sources_handlers.rs  vectordb_handlers.rs
crates/fabryk-client/: Cargo.toml
crates/fabryk-client/src/: client.rs  config.rs  error.rs  lib.rs
crates/fabryk-content/: Cargo.toml
crates/fabryk-content/src/: concept_card.rs  lib.rs  metadata.rs
crates/fabryk-core/: Cargo.toml
crates/fabryk-core/src/: deploy.rs  error.rs  identity.rs  item.rs  lib.rs  orchestration.rs  partition.rs  probe.rs  service.rs  slot.rs  tag.rs  traits.rs
crates/fabryk-fts/: Cargo.toml  README.md
crates/fabryk-fts/src/: backend.rs  builder.rs  concept_card_extractor.rs  document.rs  freshness.rs  indexer.rs  lib.rs  probe.rs  query.rs  schema.rs  stopwords.rs  tantivy_search.rs  types.rs
crates/fabryk-gcp/: Cargo.toml
crates/fabryk-gcp/src/: adc.rs  error.rs  lib.rs
(+182 files in other folders)
