[workspace]
resolver = "2"
members = [
    # ECL crates
    "crates/ecl",
    "crates/design",
    "crates/ecl-core",
    "crates/ecl-steps",
    "crates/ecl-workflows",
    "crates/ecl-cli",
    # Fabryk crates
    "crates/fabryk",
    "crates/fabryk-core",
    "crates/fabryk-content",
    "crates/fabryk-fts",
    "crates/fabryk-graph",
    "crates/fabryk-vector",
    "crates/fabryk-acl",
    "crates/fabryk-mcp",
    "crates/fabryk-mcp-content",
    "crates/fabryk-mcp-fts",
    "crates/fabryk-mcp-graph",
    "crates/fabryk-cli",
    # Fabryk auth crates
    "crates/fabryk-auth",
    "crates/fabryk-auth-google",
    "crates/fabryk-auth-mcp",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.75"
authors = ["Duncan McGreggor <oubiwann@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/oxur/textrynum"
homepage = "https://github.com/oxur/textrynum"
description = "Textrynum — Knowledge Fabric Workshop (Fabryk + ECL)"

[workspace.dependencies]
# ============================================================
# ECL Dependencies
# ============================================================

# Design documentation management
oxur-odm = "0.3"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "postgres",
    "chrono",
    "uuid",
] }

# LLM
llm = "1.3"

# Resilience
backon = "1"
failsafe = "1"

# HTTP
axum = "0.8"
tower = "0.5"
reqwest = { version = "0.13", features = ["json"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"

# Testing
proptest = "1"

# ============================================================
# Shared Dependencies (ECL & Fabryk)
# ============================================================

# Async runtime
tokio = { version = "1", features = ["full", "fs", "sync"] }
futures = "0.3"
async-trait = "0.1"

# Configuration and logging
confyg = "0.3"
twyg = "0.6"
log = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

# Error handling
thiserror = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Testing
tempfile = "3"

# ============================================================
# Fabryk-Specific Dependencies
# ============================================================

# MCP SDK
rmcp = { version = "0.17", features = ["server", "transport-io"] }

# Schema support
schemars = "1.2"

# Markdown and frontmatter
pulldown-cmark = "0.13"
serde_yaml = "0.9"

# File operations
glob = "0.3"
shellexpand = "3.1"
dirs = "5"
async-walkdir = "1"

# Regular expressions
regex = "1"

# Full-text search
tantivy = "0.22"
stop-words = "0.10"

# String matching (for source resolution)
strsim = "0.11"

# Vector database
lancedb = "0.26"
arrow-array = "57"
arrow-schema = "57"

# Local embedding generation
fastembed = "4"

# JWT/Auth
jsonwebtoken = "9"

# Graph database
petgraph = "0.8"
rkyv = { version = "0.7", features = ["validation"] }
memmap2 = "0.9"
blake3 = "1.8"

# Dev dependencies
tokio-test = "0.4"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.test]
opt-level = 1
