[workspace]
resolver = "2"
members = [
    # ECL crates
    "crates/ecl",
    "crates/design",
    "crates/ecl-core",
    "crates/ecl-steps",
    "crates/ecl-workflows",
    "crates/ecl-cli",
    "crates/ecl-pipeline-spec",
    "crates/ecl-pipeline-state",
    "crates/ecl-pipeline-topo",
    # Fabryk crates
    "crates/fabryk",
    "crates/fabryk-core",
    "crates/fabryk-content",
    "crates/fabryk-fts",
    "crates/fabryk-graph",
    "crates/fabryk-vector",
    "crates/fabryk-acl",
    "crates/fabryk-mcp",
    "crates/fabryk-mcp-core",
    "crates/fabryk-mcp-content",
    "crates/fabryk-mcp-fts",
    "crates/fabryk-mcp-graph",
    "crates/fabryk-mcp-semantic",
    "crates/fabryk-cli",
    "crates/fabryk-redis",
    # Fabryk auth crates
    "crates/fabryk-auth",
    "crates/fabryk-auth-google",
    "crates/fabryk-mcp-auth",
    # GCP utilities
    "crates/fabryk-gcp",
    # Workspace utilities
    "crates/textrynum-util",
]

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
authors = ["Duncan McGreggor <oubiwann@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/oxur/textrynum"
homepage = "https://github.com/oxur/textrynum"
description = "Textrynum — Knowledge Fabric Workshop (Fabryk + ECL)"

[workspace.dependencies]
# ============================================================
# ECL Dependencies
# ============================================================

# Design documentation management
oxur-odm = "0.3"

# Resilience
backon = "1"
failsafe = "1"

# HTTP
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio", "tracing"] }
tower = "0.5"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"

# Testing
proptest = "1"

# ============================================================
# Shared Dependencies (ECL & Fabryk)
# ============================================================

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "fs", "sync", "time"] }
futures = "0.3"
async-trait = "0.1"

# Configuration and logging
confyg = "0.3"
twyg = "0.6"
log = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# Error handling
thiserror = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Testing
tempfile = "3"

# ============================================================
# Fabryk-Specific Dependencies
# ============================================================

# MCP SDK
rmcp = { version = "1.1", features = ["server", "transport-io"] }

# Schema support
schemars = "1.2"

# Markdown and frontmatter
pulldown-cmark = { version = "0.13", default-features = false }
serde_yaml = "0.9"

# File operations
glob = "0.3"
shellexpand = "3.1"
dirs = "6"
async-walkdir = "2"

# Regular expressions
regex = "1"

# Full-text search
tantivy = "0.25"
stop-words = "0.10"

# String matching (for source resolution)
strsim = "0.11"

# Vector database
lancedb = "0.26"
arrow-array = "57"
arrow-schema = "57"

# Local embedding generation
fastembed = "5"

# JWT/Auth
jsonwebtoken = { version = "10", default-features = false, features = ["aws_lc_rs", "use_pem"] }

# Redis
redis = { version = "1.0", default-features = false, features = ["tokio-comp", "connection-manager"] }

# Graph database
petgraph = "0.8"
rkyv = { version = "0.8", features = ["bytecheck"] }
memmap2 = "0.9"
blake3 = "1.8"

# Pipeline state storage
redb = "3"

# Binary serialization
serde_bytes = "0.11"

# Dev dependencies
tokio-test = "0.4"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.test]
opt-level = 1
