[package]
name = "ecl-adapter-gdrive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Google Drive source adapter for the ECL pipeline runner"

[dependencies]
ecl-pipeline-spec = { path = "../ecl-pipeline-spec", version = "0.5.0" }
ecl-pipeline-topo = { path = "../ecl-pipeline-topo", version = "0.5.0" }
ecl-pipeline-state = { path = "../ecl-pipeline-state", version = "0.5.0" }
async-trait = { workspace = true }
reqwest = { workspace = true, features = ["form", "query"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
jsonwebtoken = { workspace = true }
glob = { workspace = true }
dirs = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
wiremock = "0.6"
