[package]
name = "ecl-adapter-sftp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "SFTP source adapter for the ECL pipeline runner"

[lints.clippy]
unwrap_used = "deny"

# Note: "deny" instead of "forbid" so tests can use unsafe for set_var/remove_var
[lints.rust]
unsafe_code = "deny"

[dependencies]
ecl-pipeline-topo = { path = "../ecl-pipeline-topo", version = "0.4.0" }
ecl-pipeline-spec = { path = "../ecl-pipeline-spec", version = "0.4.0" }
ecl-pipeline-state = { path = "../ecl-pipeline-state", version = "0.4.0" }
ecl-secrets = { path = "../ecl-secrets", version = "0.4.0" }

# SSH/SFTP
russh = { workspace = true }
russh-sftp = { workspace = true }
russh-keys = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Hashing
blake3 = { workspace = true }

# Pattern matching
glob = { workspace = true }

# Serde
serde = { workspace = true }
serde_json = { workspace = true }

# Logging & errors
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
