[package]
name = "ecl-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for ECL AI workflow management"

[dependencies]
# Internal dependencies
ecl-core = { version = "0.0.1", path = "../ecl-core" }
ecl-steps = { version = "0.0.1", path = "../ecl-steps" }
ecl-workflows = { version = "0.0.1", path = "../ecl-workflows" }

# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
confyg = { workspace = true }
twyg = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
