[package]
name = "ecl-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for ECL workflow management"

[dependencies]
# Internal dependencies — legacy ECL
ecl-core = { version = "0.4.0", path = "../ecl-core" }
ecl-steps = { version = "0.4.0", path = "../ecl-steps" }
ecl-workflows = { version = "0.4.0", path = "../ecl-workflows" }

# Internal dependencies — pipeline runner
ecl-pipeline = { version = "0.4.0", path = "../ecl-pipeline" }
ecl-pipeline-spec = { version = "0.4.0", path = "../ecl-pipeline-spec" }
ecl-pipeline-state = { version = "0.4.0", path = "../ecl-pipeline-state" }
ecl-pipeline-topo = { version = "0.4.0", path = "../ecl-pipeline-topo" }
ecl-adapter-fs = { version = "0.4.0", path = "../ecl-adapter-fs" }
ecl-adapter-gcs = { version = "0.4.0", path = "../ecl-adapter-gcs" }
ecl-adapter-gdrive = { version = "0.4.0", path = "../ecl-adapter-gdrive" }
ecl-adapter-slack = { version = "0.4.0", path = "../ecl-adapter-slack" }
ecl-adapter-zapier = { version = "0.4.0", path = "../ecl-adapter-zapier" }
ecl-stages = { version = "0.4.0", path = "../ecl-stages" }
ecl-sink-kafka = { version = "0.4.0", path = "../ecl-sink-kafka" }
ecl-sink-gcs = { version = "0.4.0", path = "../ecl-sink-gcs" }

# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
