[package]
name = "ecl-gcp-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared Google Cloud OAuth2 token management for ECL pipeline adapters"

[dependencies]
ecl-pipeline-spec = { path = "../ecl-pipeline-spec", version = "0.5.0" }
chrono = { workspace = true }
dirs = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true, features = ["form"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
wiremock = "0.6"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
