[package]
name = "ecl-pipeline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Pipeline execution engine for ECL pipeline runner"

[dependencies]
ecl-pipeline-spec = { path = "../ecl-pipeline-spec" , version = "0.4.2" }
ecl-pipeline-state = { path = "../ecl-pipeline-state" , version = "0.4.2" }
ecl-pipeline-topo = { path = "../ecl-pipeline-topo" , version = "0.4.2" }
ecl-adapter-gcs = { path = "../ecl-adapter-gcs", version = "0.4.2" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
backon = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
ecl-adapter-fs = { path = "../ecl-adapter-fs", version = "0.4.2" }
ecl-stages = { path = "../ecl-stages", version = "0.4.2" }
async-trait = { workspace = true }
blake3 = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
wiremock = "0.6"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
