[[bin]]
name = "ecl-workflows"
path = "src/main.rs"

[package]
name = "ecl-workflows"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Workflow orchestration and state management for ECL AI workflows"

[dependencies]
# Internal dependencies
ecl-core = { version = "0.1.0-alpha.0", path = "../ecl-core" }
ecl-steps = { version = "0.1.0-alpha.0", path = "../ecl-steps" }

# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
backon = { workspace = true }
failsafe = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
