[package]
name = "fabryk-acl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Access control implementation for Fabryk knowledge fabric"

[dependencies]
fabryk-core = { path = "../fabryk-core" }

# Async runtime
tokio.workspace = true
async-trait.workspace = true

# Database
sqlx.workspace = true

# Serialization
serde.workspace = true

# Error handling
thiserror.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
