[package]
name = "fabryk-acl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Access control layer for Fabryk (placeholder for v0.2/v0.3)"

[dependencies]
fabryk-core = { version = "0.5.0", path = "../fabryk-core" }

# Async
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }

[dev-dependencies]
# None yet - placeholder crate
