[package]
name = "fabryk-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "HTTP API server for Fabryk knowledge fabric"

[dependencies]
fabryk-core = { path = "../fabryk-core" }
fabryk-acl = { path = "../fabryk-acl" }
fabryk-storage = { path = "../fabryk-storage" }
fabryk-query = { path = "../fabryk-query" }

# Async runtime
tokio.workspace = true

# HTTP framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Configuration
confyg.workspace = true

# Logging
twyg.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
reqwest.workspace = true
