[package]
name = "fabryk-auth-google"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Google OAuth2 provider for fabryk-auth — JWKS cache, JWT validation, userinfo"

[dependencies]
fabryk-auth = { version = "0.2.0", path = "../fabryk-auth" }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
