[package]
name = "fabryk-auth-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP auth metadata endpoints for fabryk-auth — RFC 9728/8414 discovery"

[dependencies]
axum = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
